Fix frontend bug - open details view hides forecast graph
- problem was, that the summary was opened to the right and there it was too small to see. flex-direction: column restores the behaviour we wanted from the beginning.

--- a/frontend/src/overview/spotlist/spot/Spot.scss
+++ b/frontend/src/overview/spotlist/spot/Spot.scss
@@ -9,6 +9,7 @@ $icons-container-width: 40px;
 
 .spot {
   display: flex;
+  flex-direction: column;
   padding: 0;
   color: #000000;
   background-color: #ececec;
